<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="#000000"
  android:orientation="vertical"
  >

  <androidx.appcompat.widget.Toolbar
    android:id="@+id/toolbar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:theme="@style/CustomActionBar"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:title="@string/app_title_name"
    />

  <androidx.core.widget.NestedScrollView
    android:layout_width="0dp"
    android:layout_height="0dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/toolbar"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      >
      <FrameLayout
        android:id="@+id/fl_trending"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/_10sdp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          >

          <ImageView
            android:id="@+id/iv_cover"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_400sdp"
            android:adjustViewBounds="false"
            android:contentDescription="@string/app_name"
            android:cropToPadding="false"
            android:scaleType="centerInside"
            android:scrollY="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

          <TextView
            android:id="@+id/tv_dummy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="bottom|center_horizontal"
            android:textColor="#EBFFFFFF"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/iv_cover"
            />

          <TextView
            android:id="@+id/tv_genres"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:ellipsize="end"
            android:gravity="bottom|center_horizontal"
            android:maxLines="1"
            android:text="@string/genres"
            android:textColor="#EBFFFFFF"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_dummy"
            app:layout_constraintStart_toStartOf="parent"
            />

          <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal|center_vertical"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_genres"
            >

            <LinearLayout
              android:id="@+id/linearLayout4"
              android:layout_width="wrap_content"
              android:layout_height="match_parent"
              android:orientation="horizontal"
              app:layout_constraintBottom_toBottomOf="parent"
              app:layout_constraintEnd_toStartOf="@+id/tv_info"
              app:layout_constraintStart_toEndOf="@+id/tv_my_list"
              app:layout_constraintTop_toTopOf="parent"
              tools:layout_constraintCircleRadius="10dp"
              >

              <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#FFFFFF"
                app:cardCornerRadius="3dp"
                >

                <androidx.constraintlayout.widget.ConstraintLayout
                  android:id="@+id/cl_play"
                  android:layout_width="wrap_content"
                  android:layout_height="match_parent"
                  android:padding="4dp"
                  >

                  <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="27dp"
                    android:layout_height="27dp"
                    android:layout_marginStart="4dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/app_name"
                    app:layout_constraintBottom_toBottomOf="@+id/textView14"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/textView14"
                    app:srcCompat="@drawable/icon_play"
                    />

                  <TextView
                    android:id="@+id/textView14"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="13dp"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="Play"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imageView6"
                    tools:layout_editor_absoluteY="2dp"
                    tools:letterSpacing="0.07"
                    />

                </androidx.constraintlayout.widget.ConstraintLayout>

              </androidx.cardview.widget.CardView>

            </LinearLayout>

            <TextView
              android:id="@+id/tv_info"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginEnd="64dp"
              android:drawableTop="@drawable/icon_info"
              android:gravity="center"
              android:text="Info"
              android:textColor="#EBFFFFFF"
              android:textSize="10sp"
              app:layout_constraintBottom_toBottomOf="@+id/tv_my_list"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintTop_toTopOf="@+id/tv_my_list"
              />

            <TextView
              android:id="@+id/tv_my_list"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginStart="64dp"
              android:drawableTop="@drawable/ic_add"
              android:gravity="center"
              android:text="My List"
              android:textColor="#EBFFFFFF"
              android:textSize="10sp"
              app:layout_constraintBottom_toBottomOf="parent"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintTop_toTopOf="parent"
              />

          </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
      </FrameLayout>

      <TextView
        android:id="@+id/tv_label_top_rated"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/top_rated"
        android:textColor="@color/white"
        android:textSize="@dimen/_20ssp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fl_trending"
        />

      <TextView
        android:id="@+id/tv_label_popular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/popular"
        android:textColor="@color/white"
        android:textSize="@dimen/_20ssp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rv_top_rated"
        />

      <TextView
        android:id="@+id/tv_label_now_playing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/now_playing"
        android:textColor="@color/white"
        android:textSize="@dimen/_20ssp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rv_popular"
        />

      <androidx.constraintlayout.widget.Group
        android:id="@+id/group_top_rated"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="tv_label_top_rated,rv_top_rated"
        />
      <androidx.constraintlayout.widget.Group
        android:id="@+id/group_popular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="tv_label_popular,rv_popular"
        />
      <androidx.constraintlayout.widget.Group
        android:id="@+id/group_now_playing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="tv_label_now_playing,rv_now_playing"
        />

      <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_top_rated"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:clipToPadding="false"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tv_label_top_rated"
        app:layout_constraintTop_toBottomOf="@+id/tv_label_top_rated"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/item_movie"
        />

      <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_now_playing"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:clipToPadding="false"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tv_label_now_playing"
        app:layout_constraintTop_toBottomOf="@+id/tv_label_now_playing"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/item_movie"
        />

      <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_popular"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:clipToPadding="false"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tv_label_popular"
        app:layout_constraintTop_toBottomOf="@+id/tv_label_popular"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/item_movie"
        />

    </androidx.constraintlayout.widget.ConstraintLayout>

  </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>